--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: My DevOps Portfolio
 description: DevOps Engineer | Azure | Jenkins | GitHub Actions | C | Python | Bash | C#
 author: Nandhakumar J
-theme: chirpy
+theme: cayman
